<?xml version="1.0"?>
<package format="2">
        <name>crazyflie_py</name>
        <version>0.0.1</version>
        <description>Class for managing the crazyflie</description>

        <maintainer email="lpannocchi@g.ucla.edu">Luigi Pannocchi</maintainer>

        <license>MIT</license>

        <author email="lpannocchi@g.ucla.edu">Luigi Pannocchi</author>

        <buildtool_depend>catkin</buildtool_depend>
        <build_depend>tf</build_depend>

        <build_depend>std_msgs</build_depend>
        <build_depend>rospy</build_depend>
        <build_depend>crazyflie_driver</build_depend>

        <exec_depend>tf</exec_depend>
        <exec_depend>std_msgs</exec_depend>
        <exec_depend>rospy</exec_depend>
        <exec_depend>crazyflie_driver</exec_depend>
        <exec_depend>numpy</exec_depend>

        <export>
        </export>
</package>
